--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   confetti: ^0.7.0
+  google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^7.0.1
+  mailer: ^6.1.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
